--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,92 @@
-name: MLOps CI Pipeline with dvc,s3,mlflow
+name: MLOps CI Pipeline (DVC + MLflow + ECR)
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  train-evaluate:
+  train-build-push:
     runs-on: ubuntu-latest
 
     env:
+      # MLflow
       MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
       MLFLOW_EXPERIMENT_NAME: manu7-mlops
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ap-south-1
+
+      # AWS
+      AWS_REGION: ap-south-1
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+
+      # ECR
+      ECR_REPOSITORY: manu7-mlops-api
+      IMAGE_TAG: latest
 
     steps:
-      - name: Checkout code
+      # -----------------------------
+      # 1. Checkout code
+      # -----------------------------
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      # -----------------------------
+      # 2. Setup Python
+      # -----------------------------
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
+      # -----------------------------
+      # 3. Install dependencies
+      # -----------------------------
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install dvc[s3] mlflow
 
+      # -----------------------------
+      # 4. Pull data from DVC (S3)
+      # -----------------------------
       - name: Pull data from DVC
         run: |
           dvc pull
 
+      # -----------------------------
+      # 5. Train & Register Model
+      # -----------------------------
       - name: Run DVC Pipeline
         run: |
           dvc repro
+
+      # -----------------------------
+      # 6. Configure AWS credentials
+      # -----------------------------
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      # -----------------------------
+      # 7. Login to Amazon ECR
+      # -----------------------------
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
+
+      # -----------------------------
+      # 8. Build Docker image
+      # -----------------------------
+      - name: Build Docker image
+        run: |
+          docker build \
+            -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG .
+
+      # -----------------------------
+      # 9. Push Docker image to ECR
+      # -----------------------------
+      - name: Push Docker image to ECR
+        run: |
+          docker push \
+            $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
