--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,38 +29,7 @@ jobs:
         uses: actions/checkout@v4
 
       # -----------------------------
-      # 2. Setup Python
-      # -----------------------------
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-
-      # -----------------------------
-      # 3. Install dependencies
-      # -----------------------------
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install dvc[s3] mlflow
-
-      # -----------------------------
-      # 4. Pull data from DVC (S3)
-      # -----------------------------
-      - name: Pull data from DVC
-        run: |
-          dvc pull
-
-      # -----------------------------
-      # 5. Train & Register Model
-      # -----------------------------
-      - name: Run DVC Pipeline
-        run: |
-          dvc repro
-
-      # -----------------------------
-      # 6. Configure AWS credentials
+      # 2. Configure AWS credentials (MUST BE FIRST)
       # -----------------------------
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -70,13 +39,58 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       # -----------------------------
-      # 7. Login to Amazon ECR
+      # 3. Verify AWS identity (optional but recommended)
+      # -----------------------------
+      - name: Verify AWS identity
+        run: aws sts get-caller-identity
+
+      # -----------------------------
+      # 4. Setup Python
+      # -----------------------------
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      # -----------------------------
+      # 5. Install dependencies
+      # -----------------------------
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install dvc[s3] mlflow
+
+      # -----------------------------
+      # 6. Pull data from DVC (S3)
+      # -----------------------------
+      - name: Pull data from DVC
+        run: dvc pull
+
+      # -----------------------------
+      # 7. Train & Register Model (MLflow)
+      # -----------------------------
+      - name: Run DVC Pipeline
+        run: dvc repro
+
+      # -----------------------------
+      # 8. Login to Amazon ECR
       # -----------------------------
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
       # -----------------------------
-      # 8. Build Docker image
+      # 9. Create ECR repository if not exists
+      # -----------------------------
+      - name: Create ECR repository (if not exists)
+        run: |
+          aws ecr describe-repositories \
+            --repository-names $ECR_REPOSITORY \
+            || aws ecr create-repository \
+              --repository-name $ECR_REPOSITORY
+
+      # -----------------------------
+      # 10. Build Docker image
       # -----------------------------
       - name: Build Docker image
         run: |
@@ -84,7 +98,7 @@ jobs:
             -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG .
 
       # -----------------------------
-      # 9. Push Docker image to ECR
+      # 11. Push Docker image to ECR
       # -----------------------------
       - name: Push Docker image to ECR
         run: |
