--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
-dvc
-dagshub
-scikit-learn
-mlflow
-dvc-s3
-flask
-pandas
-boto3
-gunicorn
+# ---------------- Core ----------------
+pandas==2.1.4
+numpy==1.26.4
+scikit-learn==1.3.2
+pyyaml==6.0.1
+
+# ---------------- MLOps ----------------
+mlflow==2.9.2
+dvc==3.48.4
+dvc-s3==3.2.0
+dagshub==0.3.24
+
+# ---------------- Monitoring ----------------
 evidently==0.3.2
-pyyaml
+
+# ---------------- Serving ----------------
+flask==3.0.2
+gunicorn==21.2.0
+boto3==1.34.34
