--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,14 @@
-# ---------------- Core ----------------
-pandas==2.1.4
-numpy==1.26.4
-scikit-learn==1.3.2
-pyyaml==6.0.1
+pandas>=1.5,<3.0
+scikit-learn>=1.2,<1.6
+mlflow>=2.8,<3.0
 
-# ---------------- MLOps ----------------
-mlflow==2.9.2
 dvc==3.48.4
-dvc-s3==3.2.0
-dagshub==0.3.24
+dvc-s3==3.0.1
+dagshub==0.3.20
+pathspec==0.10.3
 
-# ---------------- Monitoring ----------------
-evidently==0.3.2
+evidently==0.4.16
 
-# ---------------- Serving ----------------
-flask==3.0.2
-gunicorn==21.2.0
-boto3==1.34.34
+flask>=2.2,<3.0
+gunicorn>=21.2
+boto3>=1.28,<2.0
