--- a/params.yaml
+++ b/params.yaml
@@ -1,7 +1,13 @@
 preprocess:
   input: data/raw/data.csv
-  reference_output: data/processed/reference.csv
-  current_output: data/processed/current.csv
+  output: data/processed/data.csv
+
+split:
+  input: data/processed/data.csv
+  reference: data/processed/reference.csv
+  current: data/processed/current.csv
+  test_size: 0.3
+  random_state: 42
 
 train:
   data: data/processed/reference.csv
@@ -10,3 +16,7 @@ train:
   random_state: 42
   n_estimators: 100
   max_depth: 5
+
+monitor:
+  reference_data: data/processed/reference.csv
+  current_data: data/processed/current.csv
