--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,15 +5,8 @@ stages:
       - data/raw/data.csv
       - src/preprocess.py
     outs:
-      - data/processed/data.csv
-
-  split:
-    cmd: python src/split.py
-    deps:
-      - data/processed/data.csv
-      - src/split.py
-    outs:
       - data/processed/reference.csv
+      - data/processed/current.csv
 
   train:
     cmd: python src/train.py
@@ -26,7 +19,7 @@ stages:
   evaluate:
     cmd: python src/evaluate.py
     deps:
-      - data/processed/reference.csv
+      - data/processed/current.csv
       - models/model.pkl
       - src/evaluate.py
 
@@ -34,5 +27,6 @@ stages:
     cmd: python src/monitoring.py
     deps:
       - data/processed/reference.csv
+      - data/processed/current.csv
       - models/model.pkl
       - src/monitoring.py
